# thesis-management

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
playground/: playground.ipynb
thesis_management/: hooks.py  modules.txt
thesis_management/thesis/module_onboarding/thesis/: thesis.json
thesis_management/thesis_management/doctype/document_submission/: document_submission.js  document_submission.json  document_submission.py  test_document_submission.py
thesis_management/thesis_management/doctype/document_submission_item/: document_submission_item.json  document_submission_item.py
thesis_management/thesis_management/doctype/lecturer/: lecturer.js  lecturer.json  lecturer.py  test_lecturer.py
thesis_management/thesis_management/doctype/student/: student.js  student.json  student.py  test_student.py
thesis_management/thesis_management/module_onboarding/thesis/: thesis.json
thesis_management/thesis_management/onboarding_step/company_set_up/: company_set_up.json
