[project]
name = "thesis_management"
authors = [
    { name = "Aurelius Ivan Wijaya", email = "aureliusivanwijaya@gmail.com" }
]
description = "Manage Thesis approval and flow"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "ed25519~=1.5",
    "reportlab~=4.2.2",
    "lxml~=5.3.0",
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
